fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     min-width: 100vw;
+    overflow: hidden;
     filter: contrast(30);
 }
 
